--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "next": "14.2.14",
+    "randomstring": "^1.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
